fixed icomoon fonts not showing and small bugs

--- a/Glide_Ez_project/glideEz/static/glideEz/css/themify-icons.css
+++ b/Glide_Ez_project/glideEz/static/glideEz/css/themify-icons.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: "themify";
-  src: url("../../static/glideEz/fonts/themify-icons/themify.eot?-fvbane");
-  src: url("../../static/glideEz/fonts/themify-icons/themify.eot?#iefix-fvbane") format("embedded-opentype"),
-    url("../../static/glideEz/fonts/themify-icons/themify.woff?-fvbane") format("woff"),
-    url("../../static/glideEz/fonts/themify-icons/themify.ttf?-fvbane") format("truetype"),
-    url("../../static/glidez/fonts/themify-icons/themify.svg?-fvbane#themify") format("svg");
+  font-family: 'themify';
+  src: url('../fonts/themify-icons/themify.eot?-fvbane');
+  src: url('../fonts/themify-icons/themify.eot?#iefix-fvbane') format('embedded-opentype'),
+    url('../fonts/themify-icons/themify.woff?-fvbane') format('woff'),
+    url('../fonts/themify-icons/themify.ttf?-fvbane') format('truetype'),
+    url('../fonts/themify-icons/themify.svg?-fvbane#themify') format('svg');
   font-weight: normal;
   font-style: normal;
 }
